--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -1317,11 +1317,11 @@ server callback hand the username and password into any local policy
 deciding authentication system (such as @file{/etc/passwd} via PAM).
 
 Mechanism such as @samp{CRAM-MD5} and @samp{DIGEST-MD5} uses hashed
-passwords.  The client callback are the same as for PLAIN.  However,
-the server do not receive the plain text password via the network but
-rather a hash of it.  Existing policy deciding systems like PAM cannot
-handle this, so the server callback for these mechanisms are more
-complicated.
+passwords.  The client callback behaviour is the same as for PLAIN.
+However, the server do not receive the plain text password over the
+network but rather a hash of it.  Existing policy deciding systems
+like PAM cannot handle this, so the server callback for these
+mechanisms are more complicated.
 
 Further, mechanisms like GSSAPI (Kerberos 5) assume a specific
 authentication system.  In theory this means that the SASL library
