--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Changes in 0.2.0 (unreleased)
+* Changes in 0.2.0 (released 2004-11-07)
 
 ** Added new directory examples/ with complete examples for new API.
 
